# tinyase_project

./: Cargo.toml  README.md
aseprite_tool/: Cargo.toml
tinyase/: Cargo.toml  README.md
tinyase/src/: embedded_graphics.rs  lib.rs  parser.rs
tinyase/src/parser/: chunk.rs  frame.rs
tinyase/src/parser/chunk/: layer.rs
tinyase/tests/: anim_idle.ase
tinyase_demo/: Cargo.toml
tinyase_demo/src/: draw.rs  main.rs
