[package]
name = "tinyase"
version = "0.1.0"
edition = "2024"

[dependencies]
compression = { version = "0.1.5", features = ["zlib"], default-features = false, path = 'C:\Users\EvansGrace02\Documents\Workspace\rust-compression' }
no_inflate = "0.1.1"
nom = { version = "8.0.0", default-features = false, features = ["alloc"] }
nom-derive = { version = "0.11.0", git = "https://github.com/rust-bakery/nom-derive.git", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.17", default-features = false }
zerocopy = { version = "0.8.31", features = ["derive"] }
zerocopy-derive = "0.8.31"

[dev-dependencies]
nom = { version = "8.0.0" }
