[package]
name = "tinyase"
description = "A no-std and mostly zerocopy Aseprite (.ase/.aseprite) file parser for embedded devices"
keywords = ["aseprite", "ase", "no-std", "zerocopy", "embedded"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "2.10.0"
thiserror = { version = "2.0.17", default-features = false }
zerocopy = { version = "0.8.31", features = ["derive"] }
zerocopy-derive = "0.8.31"
